Fix button overlapping container

--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -11,6 +11,9 @@
   }
 }
 
+$desktop-nav-height: 80%;
+$mobile-nav-height: 10%;
+
 .wrapper {
   display: flex;
   justify-content: center;
@@ -55,9 +58,15 @@
   position: relative;
   border-radius: .5rem;
   width: 80%;
-  height: 80%;
+  height: $desktop-nav-height + $mobile-nav-height;
   background-color: #fff;
   border: solid $content-border-width rgba(#fff, 0.3);
+  margin-top: $mobile-nav-height; // To push it back down
+
+  @include tablet {
+    height: $desktop-nav-height;
+    margin-top: unset;
+  }
 
   .circleWrapper {
     position: absolute;
@@ -99,7 +108,7 @@
   }
 }
 
-.content-nav {
+.mobile-nav {
   width: 100%;
   height: 15%;
   display: block;
